Version 7.0.4
- Fixed an issue with casting to different size in nucode
- Fixed incorrect line info in some DEBUG statements
- Fixed incorrect re-use of parameter registers near functions that have an ABORT or THROW

Version 7.0.3
- Fixed .fpide search so file names are relative to the .fpide file
- Improved listing file tracking of COG pc (still buggy, but better)
- Made inline function expansion more robust
- Remove binary output when errors are detected in final compilation

Version 7.0.2
- Avoid a crash if a .fpide file is not found
- Fixed a problem with `loc #\imm` in inline asm

Version 7.0.1
- Fixed incorrect casts of arrays
- Fixed incorrect handling of weak symbol aliases
- Put a dummy entry at the beginning of the method table, to represent NULL
- Removed unnecessary definition of PINMODE

Version 7.0.0
- Added Spin2 structures (basically small objects)
- Added Spin2 TASK functions
- Added BOOL debug modifier for -g
- Added some of the v44 Spin2 builtin methods like byteswap
- Added warning for rep without @
- Added %QUAD keyword for 64 bit variables in Spin2
- Added some experimental optimizations (thanks to Ada)
- Added ability to fall back to more compatible inline assembly (-Ono-fast-inline-asm)
- Allowed RET in fcache'd inline assembly
- Cleaned up the Spin parser to enable direct access to struct/obj members
- Fixed long relative branches (tjz, djnz, etc.)
- Fixed incorrect handling of simple for loops with unsigned variables
- Fixed return values from fwrite and fread
- Fixed result type of ?:, particularly for long long
- Improved some debug error messages
- Only use the stack for variables whose address is actually taken (thanks to Ada for this!)
- Modified _BlockDevice data structure (used for littlefs, but someday may be used for fatfs too)
- Made _float_tointeger() saturate when the result is too big/small
- Made off_t be 64 bits, to allow for files > 2GB
- Made the preprocessor case-insensitive by default (for Spin and BASIC)